--- a/app/views/lotto/pick_and_check.html.erb
+++ b/app/views/lotto/pick_and_check.html.erb
@@ -1,5 +1,6 @@
 <div class = "container">
     <h1>추첨 결과를 보여줄 view 입니다.</h1>
+    <h2>Test 화면입니다.</h2>
     <p><%= "이번주 로또 번호는 #{@drw_numbers}이고, 보너스 번호는 #{@bonus_number}입니다."%></p>
     <p><%= "추첨한 로또 번호는 #{@my_numbers}입니다."%></p>
     <p><%= "겹치는 번호는 #{@match_numbers}입니다."%></p>
